[metadata]
name = fpb
version = attr: fpb.__version__
author = attr: fpb.__author__
author-email = attr: fpb.__author_email__
url = attr: fpb.__url__
project_urls =
summary = attr: fpb.__doc__
description-file = file: README.rst
description-content-type = text/x-rst; charset=UTF-8
requires-python = >=3.4

requires-dist =
    setuptools

classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing
    Topic :: System :: Archiving :: Packaging

keywords = file, test, random

[options]
py_modules=fpb
zip_safe = False
include_package_data = True
