[metadata]
name = fpb
version = attr: fpb.__version__
author = attr: fpb.__author__
author-email = attr: fpb.__email__
url = attr: fpb.__url__
project_urls =
summary = attr: fpb.__doc__
# description-file = file: README.rst
description-content-type = text/x-rst; charset=UTF-8

requires-dist =
    setuptools

classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing

keywords = benchmark, numpy, pandas, dask, math, cupy, minpy, cuda, nvidia


[options]
zip_safe = False
include_package_data = True
package_dir=
packages=find:
    
install_requires =
    numpy

test_suite = fpb.tests.get_suite

[options.entry_points]
console_scripts =
    fpb = fpb.main:console

[coverage:run]
omit = fpb/tests.py
branch = True
source = fpb

[coverage:report]
show_missing = true
exclude_lines =
    noqa
    NotImplemented
